Added in .tga and .obj files for car frames and wheels

--- a/DM2122_Week16_Files - Copy/DM2122 Prac/DM2122 Prac.vcxproj.filters
+++ b/DM2122_Week16_Files - Copy/DM2122 Prac/DM2122 Prac.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClInclude Include="Source\TopDownCamera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Source\SceneShowroom.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\shader.cpp">
@@ -120,6 +123,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Source\TopDownCamera.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\SceneShowroom.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
