--- a/DM2122_Week16_Files - Copy/DM2122 Prac/DM2122 Prac.vcxproj
+++ b/DM2122_Week16_Files - Copy/DM2122 Prac/DM2122 Prac.vcxproj
@@ -131,6 +131,7 @@
     <ClInclude Include="Source\Camera2.h" />
     <ClInclude Include="Source\Camera3.h" />
     <ClInclude Include="Source\CarAI.h" />
+    <ClInclude Include="Source\CarMinigame.h" />
     <ClInclude Include="Source\Light.h" />
     <ClInclude Include="Source\LoadOBJ.h" />
     <ClInclude Include="Source\LoadTGA.h" />
@@ -138,6 +139,7 @@
     <ClInclude Include="Source\Mesh.h" />
     <ClInclude Include="Source\MeshBuilder.h" />
     <ClInclude Include="Source\Minigame.h" />
+    <ClInclude Include="Source\Path.h" />
     <ClInclude Include="Source\Scene.h" />
     <ClInclude Include="Source\SceneSkybox.h" />
     <ClInclude Include="Source\shader.hpp" />
@@ -152,12 +154,14 @@
     <ClCompile Include="Source\Camera2.cpp" />
     <ClCompile Include="Source\Camera3.cpp" />
     <ClCompile Include="Source\CarAi.cpp" />
+    <ClCompile Include="Source\CarMinigame.cpp" />
     <ClCompile Include="Source\LoadOBJ.cpp" />
     <ClCompile Include="Source\LoadTGA.cpp" />
     <ClCompile Include="Source\main.cpp" />
     <ClCompile Include="Source\Mesh.cpp" />
     <ClCompile Include="Source\MeshBuilder.cpp" />
     <ClCompile Include="Source\Minigame.cpp" />
+    <ClCompile Include="Source\Path.cpp" />
     <ClCompile Include="Source\SceneSkybox.cpp" />
     <ClCompile Include="Source\shader.cpp" />
     <ClCompile Include="Source\TopDownCamera.cpp" />
