--- a/DM2122_Week16_Files - Copy/DM2122 Prac/DM2122 Prac.vcxproj.filters
+++ b/DM2122_Week16_Files - Copy/DM2122 Prac/DM2122 Prac.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClInclude Include="Source\Path.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Source\CCar.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\shader.cpp">
@@ -132,6 +135,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Source\Path.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\CCar.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
