--- a/DM2122_Week16_Files - Copy/DM2122 Prac/DM2122 Prac.vcxproj
+++ b/DM2122_Week16_Files - Copy/DM2122 Prac/DM2122 Prac.vcxproj
@@ -141,6 +141,7 @@
     <ClInclude Include="Source\Mesh.h" />
     <ClInclude Include="Source\MeshBuilder.h" />
     <ClInclude Include="Source\Minigame.h" />
+    <ClInclude Include="Source\MouseCamera.h" />
     <ClInclude Include="Source\NPC.h" />
     <ClInclude Include="Source\Path.h" />
     <ClInclude Include="Source\Scene.h" />
@@ -169,6 +170,7 @@
     <ClCompile Include="Source\Mesh.cpp" />
     <ClCompile Include="Source\MeshBuilder.cpp" />
     <ClCompile Include="Source\Minigame.cpp" />
+    <ClCompile Include="Source\MouseCamera.cpp" />
     <ClCompile Include="Source\NPC.cpp" />
     <ClCompile Include="Source\Path.cpp" />
     <ClCompile Include="Source\SceneCarSelection.cpp" />
